Implemented an activity with a fragment.
Thread spawned by top button now calls back to headless fragment.

Various tweaks to save state when screen rotates; more stuff should stay the same.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.joseph.practiceapp.MainActivity" />
         </activity>
+        <activity
+            android:name=".FragmentActivity"
+            android:label="@string/title_activity_fragment"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.joseph.practiceapp.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
